# YLabCore

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py
adapters/device_testbox/: __init__.py  command_adapter.py  state_adapter.py  telemetry_adapter.py
adapters/drivers/: __init__.py  device_lcr.py  device_testbox.py  driver_base.py  lcr_admx2001.py  lcr_base.py
adapters/mqtt/: __init__.py  command_adapter.py  state_adapter.py  telemetry_adapter.py
adapters/parsers/: __init__.py
adapters/transport/: __init__.py
apps/: __init__.py
apps/device_lcr/: __init__.py  actor.py  hb.py  main.py  queues.py
apps/device_testbox/: __init__.py  actor.py  hb.py  main.py  queues.py
apps/devices/: __init__.py  driver_base.py
apps/orchestrator/: __init__.py  main.py  saga.py
apps/persistor/: __init__.py  batcher.py  main.py
configs/: app.yaml  devices.yaml  mqtt_acl.sample.conf
core/: __init__.py
docs/: ARCHITECTURE_COMPARISON.md  ARCHITECTURE_EVOLUTION.md  DIFFERENCES_SUMMARY.md  INDEX.md  M0_SUMMARY.md  M0_VERIFICATION.md  PHASE1_IMPLEMENTATION_GUIDE.md  PROJECT_PROGRESS.md  TESTBOX_QUICKSTART.md
infra/: docker-compose.yml  mosquitto.conf  mosquitto.password
instrument_hub/: __init__.py
schemas/: cmd.lcr.start_sweep.schema.json  evt.error.schema.json  evt.lcr.sweep_done.schema.json  evt.lcr.sweep_progress.schema.json  state.shadow.schema.json  tele.lcr.impedance_point.schema.json
scripts/: gen_diagram.py  replay_telemetry.py  seed_mqtt.ps1
tests/: __init__.py
tools/: fake_lcr.py
(+100 files in other folders)
